change layout on IMG sprites and playlist screen
Add coroutine debugging
change layout on IMG sprites and playlist selection screens
remove deprecated elements from UI